--- a/styles/newyear.css
+++ b/styles/newyear.css
@@ -35,3 +35,40 @@ background-color: #070211;
 
     font-weight: 900;
 }
+.off{
+    text-align: center;
+    margin-top: 120px;
+}
+.Holiday{
+    color: #F00;
+    font-size: 88px;
+    font-weight: 700;
+}
+.Deals{
+    color: #F00;
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 48px;
+}
+.Better{
+    color: #070211;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 700;
+}
+.Happy-new-year{
+    width: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 48px;
+    
+    transition: transform 0.3s ease;
+
+  
+}
+
+.Happy-new-year:hover{
+    transform: scale(1.12)
+}
+
