--- a/styles/newyear.css
+++ b/styles/newyear.css
@@ -115,3 +115,45 @@ height: 243px;
     
 
 }
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 20px;
+    /* padding: 20px 0; */
+   
+  }
+
+.grid-container,.iteam1{
+width: 1100px;
+}
+
+  img{
+width: 100%;
+height: 100%;
+
+
+  }
+  .item1{
+    width: 100%;
+    height: 100%;
+  }
+  .best{
+    color: #F00;
+    font-size: 17px;
+    font-weight: 500;
+  }
+  .awesome{
+    color: #070211;
+    font-size: 28px;
+    font-weight: 900;
+    margin-top: 16px;
+  }
+  .amet{
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 10px;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 40px;
+  }
+ 
+
