--- a/styles/newyear.css
+++ b/styles/newyear.css
@@ -155,5 +155,57 @@ height: 100%;
     margin-top: 20px;
     margin-bottom: 40px;
   }
- 
+  .subuscribe{
+    
+    text-align: center;
+    border-radius: 16px;
+background: rgba(255, 0, 0, 0.05);
+width: 900px;
+height: 400px;
+text-align: center;
+position: absolute;
+top: 550%;
+left: 61%;
+transform: translate(-65%, -65%);
+
+  }
+ .news-paper{
+    width: 80px;
+    height: 80px;
+    margin-top: 55px;
+ }
+ .molestie{
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 16px;
+    font-weight: 400;
+ }
+ .News-letter{
+    margin-top: 20px;
+    color: #070211;
+font-size: 38px;
+font-weight: 900;
+ }
+.contact input[type="user@gmail.com"]{
+    width: 40%;
+ }
+ .contact{
+    margin-top: 30px;
+ }
+
+ .malesuada{
+    border-radius: 50px;
+background: #FFF;
+padding: 8px;
+border: #FFF;
+ }
+ .Inter{
+     color: #FFF; 
+text-align: center;
+font-size: 12px;
+font-weight: 600;
+padding: 8px;
+border-radius: 0px 50px 50px 0px;
+background: #F00;
+border: none;
+ }
 
